@@ -1,7 +1,7 @@
 Package: EGAnet
 Title: Exploratory Graph Analysis – A Framework for Estimating the Number of Dimensions in Multivariate Data using Network Psychometrics
 Version: 2.0.2
-Date: 2023-10-13
+Date: 2023-10-24
 Authors@R: c(person("Hudson", "Golino", email = "hfg9s@virginia.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-1601-1447")),
 	     person("Alexander", "Christensen", email = "alexpaulchristensen@gmail.com", role = "aut", comment = c(ORCID = "0000-0002-9798-7037")),
 	     person("Robert", "Moulder", email = "rgm4fd@virginia.edu", role = "ctb", comment = c(ORCID = "0000-0001-7504-9560")),
@@ -25,11 +25,11 @@ Depends: R (>= 3.5.0)
 License: GPL (>= 3.0)
 Encoding: UTF-8
 LazyData: true
-Imports: BGGM, future, future.apply, glasso, GGally, 
+Imports: future, future.apply, glasso, GGally, 
          ggdendro, ggplot2, ggpubr, GPArotation, 
          igraph (>= 1.3.0), lavaan, Matrix, methods, 
          network, progressr, qgraph, semPlot, sna, stats
-Suggests: fitdistrplus, fungible, gridExtra, knitr, markdown,
+Suggests: BGGM, fitdistrplus, fungible, gridExtra, knitr, markdown,
           pbapply, progress, psych, pwr, RColorBrewer
 URL: https://r-ega.net
 BugReports: https://github.com/hfgolino/EGAnet/issues
